--- a/releaseNotes.html
+++ b/releaseNotes.html
@@ -1,4 +1,5 @@
 <!--
+   Need to pay 10 millions for the license.
 
     Licensed to Apereo under one or more contributor license
     agreements. See the NOTICE file distributed with this work
